se agregaron cargos adicionales

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Paquetes</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://fonts.googleapis.com/css?family=Orbitron|Roboto|Permanent+Marker&display=swap" rel="stylesheet">
-    <link rel='stylesheet' type='text/css' media='screen' href='../css/main.css'>
-    <script src='../js/index.js'></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+    <script src='js/index.js'></script>
 </head>
 <body>
     <nav>
@@ -26,7 +26,7 @@
                         <p><h2><strong>Pago Unico</strong></h2></p>
                     </div> 
                     <div class="content-circle" >
-                        <div class="circle"><h2>2500 $</h2></div>
+                        <div class="circle"><h2>2500.00 $</h2></div>
                     </div>
                     <div class="content-list">
                          <ul>
@@ -60,7 +60,7 @@
                             <p><h2><strong>Prima + Renta mensual</strong></h2></p>
                     </div> 
                     <div class="content-circle" >
-                            <div class="circle"><h2>2600 $</h2></div>
+                            <div class="circle"><h2>2600.00 $</h2></div>
                         </div>
                     <div class="content-list">
                          <ul>
@@ -93,7 +93,7 @@
                             <p><h2><strong>Prima + Renta mensual</strong></h2></p>
                     </div> 
                     <div class="content-circle" >
-                            <div class="circle"><h2>2800 $</h2></div>
+                            <div class="circle"><h2>2800.00 $</h2></div>
                         </div>
                     <div class="content-list">
                          <ul>
@@ -122,29 +122,45 @@
                 </div>
                 
             </div>
-                
+        </article>
+    </fieldset>
+    <fieldset class="main"> 
+        <div class="table-content">
+            <div class="circle-white"><h2>Costos Adicionales</h2></div>
+            <div class="table-div">
+                <div class='table-detail'>
+                    <div class="content-title">
+                            <p><h2><strong>Pago Unico</strong></h2></p>
+                        </div> 
+                        <div class="content-circle" >
+                            <div class="circle"><h2>1000.00 $</h2></div>
+                    </div>
+                    <div>
+                        <ul>
+                            <li type="circle"> <strong>Compañia adicional</strong> 600.00 $</li>                            
+                            <li type="circle"><strong>Usuario Admin adicional</strong> 300.00 $</li>
+                            <li type="circle"><strong>Usuario Operador adicional</strong> 100.00 $</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class='table-detail'>
+                        <div class="content-title">
+                                <p><h2><strong>Prima + Renta mensual</strong></h2></p>
+                            </div> 
+                            <div class="content-circle" >
+                                <div class="circle"><h2>625.00 $</h2></div>
+                        </div>
+                        <div>
+                            <ul>
+                                <li type="circle"> <strong>Compañia adicional</strong> 600.00 $</li>                                
+                                <li type="circle"><strong>Usuario Admin adicional</strong> 15.00 $</li>
+                                <li type="circle"><strong>Usuario Operador adicional</strong> 10.00 $</li>
+                                <li ><strong>Renta 22 o 36 Meses</strong></li>
+                            </ul>
+                        </div>
+                </div>  
             </div>
-        </article>
-        <article>
-                <table>
-                    <header>
-                        <h3>Opciones adicionales para tu paquete</h3>
-                    </header>
-                    <body>
-                        <tr>
-                            <th>asda</th>
-                            <th>dasd</th>
-                        </tr>
-                        <tr>
-                            <td>asda</td>
-                            <td>dasd</td>
-                        </tr>
-                    </body>
-                    <footer>
-
-                    </footer>
-                </table>
-        </article>
+        </div>
     </fieldset>
 </body>
 </html>
