--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
         </article>
     </fieldset>
-    <fieldset class="main"> 
+    <fieldset class="main2"> 
         <div class="table-content">
             <div class="circle-white"><h2>Costos Adicionales</h2></div>
             <div class="table-div">
